Change table ID name and add button for all projects

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -14,9 +14,10 @@
 <h3><%= link_to "Create New Project", new_project_path(@project) %></h3>
 <br>
 
-
-
-<table id="table">
+<button id="project-data-all-projects">All Projects</button>
+<br>
+<br>
+<table id="table-js">
   <tr>
     <th>Project Name</th>
     <th>Description</th>
