Add button class

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -14,7 +14,7 @@
 <h3><%= link_to "Create New Project", new_project_path(@project) %></h3>
 <br>
 
-<button id="post-data-all-projects">All Projects</button>
+<button id="post-data-all-projects" class="button button2">All Projects</button>
 <br>
 <br>
 <table id="table-js">
