--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,8 +1,10 @@
 <h2>Welcome <%=current_user.capitalize%></h2>
 
-<div class="date">
 
-</div>
+<div id="greeting"></div>
+
+<div id="date"></div>
+
 
 
 <div class= "admin">
