Take out HideTableHeader function

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -135,7 +135,7 @@ body {
         // font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
         border-collapse: collapse;
         width: 100%;
-        display: none;
+        // display: none;
 
 
         td, th {
