Add scroll to projects table

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -14,13 +14,17 @@
 <button id="post-data-all-projects" class="button button2">All Projects</button>
 <br>
 <br>
-<table id="table-js" >
-  <tr>
-    <th>Project Name</th>
-    <th>Description</th>
-    <th>Client Name</th>
-    <th>Target Completion Date</th>
-    <th>Completion Date</th>
-  </tr>
-  <!-- here goes our data! -->
-</table>
+<div style="overflow-x:auto;">
+  <div class="scrollit">
+    <table id="table-js" >
+      <tr>
+        <th>Project Name</th>
+        <th>Description</th>
+        <th>Client Name</th>
+        <th>Target Completion Date</th>
+        <th>Completion Date</th>
+      </tr>
+      <!-- here goes our data! -->
+    </table>
+  </div>
+</div>
