Add hide project button

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -14,6 +14,11 @@
 <button id="post-data-all-projects" class="button button2">All Projects</button>
 <br>
 <br>
+<button id="hide-data-all-projects" class="button button2">Hide Projects</button>
+<br>
+<br>
+
+
 <div style="overflow-x:auto;">
   <div class="scrollit">
     <table id="table-js" >
