Work on button to add all projects

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -14,9 +14,9 @@
 <button id="post-data-all-projects" class="button button2">All Projects</button>
 <br>
 <br>
-<button id="hide-data-all-projects" class="button button2">Hide Projects</button>
+<!-- <button id="hide-data-all-projects" class="button button2">Hide Projects</button>
 <br>
-<br>
+<br> -->
 
 
 <div style="overflow-x:auto;">
@@ -29,7 +29,9 @@
         <th>Target Completion Date</th>
         <th>Completion Date</th>
       </tr>
+      <tbody class="all-data">
       <!-- here goes our data! -->
+      </tbody>
     </table>
   </div>
 </div>
