--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -55,6 +55,9 @@ body {
    // p {
    //   margin-bottom: 18px;
    // }
+   .color_red {
+     color: blue;
+   }
 
 /* --- Main Section Wrapper --- */
 
@@ -158,9 +161,9 @@ body {
    /* --- Button --- */
 
 .button {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
+  background-color: white;
+  border: 2px solid #009dff;
+  color: black;
   padding: 16px 32px;
   text-align: center;
   text-decoration: none;
@@ -172,14 +175,8 @@ body {
   cursor: pointer;
 }
 
-.button2 {
-  background-color: white;
-  color: black;
-  border: 2px solid #008CBA;
-}
-
-.button2:hover {
-  background-color: #008CBA;
+.button:hover {
+  background-color: #009dff;
   color: white;
 }
 
