Take out button2 class

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -34,7 +34,7 @@
 
 <br>
 <br>
-<button id="post-data-completed-projects" class="button button2">Completed Projects</button>
+<button id="post-data-completed-projects" class="button">Completed Projects</button>
 <br>
 <br>
 
@@ -57,7 +57,7 @@
 
 <br>
 <br>
-<button id="post-data-all-projects" class="button button2">All Projects</button>
+<button id="post-data-all-projects" class="button">All Projects</button>
 <br>
 <br>
 <!-- <button id="hide-data-all-projects" class="button button2">Hide Projects</button>
