Update table-js to show header

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -55,9 +55,9 @@ body {
    // p {
    //   margin-bottom: 18px;
    // }
-   .color_red {
-     color: blue;
-   }
+   // .color_red {
+   //   color: blue;
+   // }
 
 /* --- Main Section Wrapper --- */
 
