Update red_color class to color

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,6 @@
-<h2 class="color_red">Welcome <%=current_user.capitalize%></h2>
+<h2 class="color">Welcome <%=current_user.capitalize%></h2>
 
-<div id="date" class="color_red"></div>
+<div id="date" class="color"></div>
 
 <div class= "admin">
   <% if current_user.admin%>
