Add conditional to check if completion date is null and return empty string instead of null

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,5 @@
-<h2 class="color">Welcome <%=current_user.capitalize%></h2>
+<h2>Welcome <%=current_user.capitalize%></h2>
+
 
 <div id="date" class="color"></div>
 
