Add alpha sort button to open projects

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -13,8 +13,11 @@
 <br>
 
 <button id="post-data-open-projects" class="button">Open Projects</button>
+
+<button id="post-data-alpha-projects" class="button">Alpha Projects</button></br>
 <br>
-<br>
+
+
 
 <div style="overflow-x:auto;">
   <div class="scrollit">
@@ -32,6 +35,7 @@
     </table>
   </div>
 </div>
+
 
 <br>
 <br>
